--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,1 +1,5 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Assistant:300" rel="stylesheet">
+
+<script type="text/discourse-plugin" version="0.8.18">
+    api.changeWidgetSetting('post-avatar', 'size', '55');
+</script>
