--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,1 +1,33 @@
 <link href="https://fonts.googleapis.com/css?family=Assistant:300" rel="stylesheet">
+
+<script type="text/x-handlebars" data-template-name="components/d-navigation">
+  {{bread-crumbs categories=categories category=category noSubcategories=noSubcategories}}
+
+  {{#if showCategoryAdmin}}
+    {{categories-admin-dropdown
+      create=createCategory
+      reorder=reorderCategories}}
+  {{/if}}
+
+  {{navigation-bar navItems=navItems filterMode=filterMode category=category}}
+
+  {{#if showCategoryEdit}}
+    {{d-button
+      class="btn-default edit-category"
+      action=editCategory
+      icon="wrench"
+      label="category.edit_long"}}
+  {{/if}}
+
+  {{create-topic-button
+    canCreateTopic=canCreateTopic
+    action=createTopic
+    disabled=createTopicDisabled
+    label=createTopicLabel
+  }}
+
+  {{#if showCategoryNotifications}}
+    {{category-notifications-button value=category.notification_level category=category}}
+  {{/if}}
+</script>
+
